Frontend/Docs/Grammar.txt
Grammar        ::= Statement Grammar | Statement
Statement       ::= FuncDeclaration | VarDeclaration | Assignment | FuncCall ";" | IfStatement | WhileStatement |
                    In ";" | Out | ";";
VarDeclaration  ::= Declaration Identifier [ "=" Expression | In ] ";"
Assignment      ::= Identifier "=" (Expression | In) ";"
IfStatement     ::= If "(" Expression ")" "{" { Statement } "}"
WhileStatement  ::= While "(" Expression ")" "{" { Statement | Break | Continue } "}"
FuncDeclaration ::= Declaration Identifier "(" Parameters ")" "{" { Statement | Return } "}"
Parameters      ::= [Declaration Identifier {"," Parameters } ]
FuncCall        ::= Identifier "(" [Arguments] ")"
Arguments       ::= [ Identifier { "," Arguments } ]
If              ::= "if"
While           ::= "while"
Declaration     ::= "int"
Break           ::= "break" ";"
Continue        ::= "continue" ";"
In              ::= "input()"
Out             ::= "print" "(" Expression ")" ";"
Return          ::= "return" Expression ";"
Expression      ::= Priority5
Priority5       ::= Priority4 { ( "and" | "or" ) Priority5 }
Priority4       ::= Priority3 { ( "==" | "!=" | ">=" | "<=" | ">" | "<") Priority4}
Priority3       ::= Priority2 { { "+" | "-" } Priority3 }
Priority2       ::= Priority1 { ( "*" | "/" ) Priority2 }
Priority1       ::= Priority0 { "^" Priority1}
Priority0       ::= "sin" "(" Priority5 ")" | "cos" "(" Priority5 ")" | "sqrt" "(" Priority5 ")" | "!" Value | Value
Value           ::= "(" Priority5 ")" | Number | FuncCall | Identifier
Identifier      ::= Character { Character | Digit }
Number          ::= [ "-" ] Digit { Digit }
